fixing text alignment in projects

--- a/src/style.css
+++ b/src/style.css
@@ -551,6 +551,7 @@ button:focus {
   font-size: 2.3em !important;
   font-weight: 500 !important;
   padding-top: 10px !important;
+  text-align: center;
 }
 
 /* --------- */
